--- a/PersonalSite/Pages/Resume/ResumePage.razor.css
+++ b/PersonalSite/Pages/Resume/ResumePage.razor.css
@@ -9,7 +9,6 @@
     padding: 0 0 0.5em 0;
 }
 
-
 dl.skills dt {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     margin: 0;
@@ -61,4 +60,10 @@ dl.skills dd {
     display: inline-block;
     background-color: #007bff;
     vertical-align: middle;
+}
+
+.badge.rounded-pill.bg-secondary {
+    background-color: rgb(231 231 231) !important;
+    color: #4b4b4b !important;
+    font-weight: normal !important;
 }
