--- a/PersonalSite/Disqus/CommentCount.razor
+++ b/PersonalSite/Disqus/CommentCount.razor
@@ -1,6 +1,4 @@
-<h4 class="badge bg-secondary m-0" style="background-color: lightgrey!important;
-    font-size: 12pt !important;
-    border-radius: .70rem;"><DisqusCount Url="@Url" /></h4>
+<h4 class="badge bg-secondary comment-badge m-0"><DisqusCount Url="@Url" /></h4>
 
 @code {
     [Parameter]
