--- a/PersonalSite/Pages/Resume/ResumePage.razor
+++ b/PersonalSite/Pages/Resume/ResumePage.razor
@@ -150,7 +150,7 @@
                                         {link}
                                     </div>";
 
-                                <a tabindex="0" class="badge rounded-pill bg-secondary me-1 mb-1 text-decoration-none" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="@skillName" data-bs-content="@content" data-bs-html="true">
+                                <a tabindex="0" class="badge rounded-pill tag me-1 mb-1 text-decoration-none" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="@skillName" data-bs-content="@content" data-bs-html="true">
                                     @skillName
                                 </a>
                             }
