--- a/PersonalSite/Pages/Resume/ExperienceList.razor
+++ b/PersonalSite/Pages/Resume/ExperienceList.razor
@@ -33,7 +33,7 @@
         var lastExperience = experiences.First();
         var firstExperience = experiences.Last();
 
-        <div class="d-flex" style="page-break-inside: avoid;">
+        <div class="d-flex" style="break-inside: avoid-page;">
             <div class="col-logo">
                 <Logo Src="@firstExperience.CompanyLogo" Alt="@($"{firstExperience.Company} logo")" Class="me-4"
                     Href="@firstExperience.Link" />
