--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
                 <NavLink class="nav-link" href="blog">Blog</NavLink>
             </li>
             <li class="nav-item">
-                <NavLink class="nav-link" href="resume">Résumé</NavLink>
+                <NavLink class="nav-link" href="resume">Resumé</NavLink>
             </li>
             <li class="nav-item">
                 <NavLink class="nav-link" href="portfolio">Portfolio</NavLink>
