--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -2,7 +2,7 @@
 @import url('app.dark.css');
 @import url('blog.css');
 @import url('blog.dark.css');
-@import url('hightlight.css');
+@import url('highlight.css');
 @import url('syntax.css');
 @import url('syntax.dark.css');
 
