--- a/PersonalSite/wwwroot/css/blog.css
+++ b/PersonalSite/wwwroot/css/blog.css
@@ -116,7 +116,7 @@ article ul>li {
     margin-bottom: 15px;
 }
 
-article img:not(.cover) {
+article img:not(.cover).left, article img:not(.cover).right {
     max-height: 100%;
     max-width: 300px;
     padding: 4px;
